Fix heal modal layout on mobile

--- a/src/views/home/style.css
+++ b/src/views/home/style.css
@@ -1394,7 +1394,6 @@
     flex-wrap: wrap;
     margin: 4px 1px;
     width: 85%;
-    min-width: 675px;
     gap: 12px;
 }
 .nft-grid img {
